--- a/styles.css
+++ b/styles.css
@@ -191,11 +191,12 @@ a{
 /* location */
 .location{
     height: 100%;
-    margin: 0;
-    padding: 0;
+    margin: 20px;
 }
 
-#dvMap {
-    width: 500px;
+#map-div {
+    border-radius: 5px;
+    margin: 20px; 
+    width: 700px;
     height: 500px;
 }
